--- a/Modern/localisation/countries.csv
+++ b/Modern/localisation/countries.csv
@@ -1,32 +1,2 @@
-YAM;Yamato;;;;;;;;;;;;;x;;;;
-YAM_ADJ;Yamato;;;;;;;;;;;;;x;;;;
-GOG;Goguryeo;;;;;;;;;;;;;x;;;;
-GOG_ADJ;Goguryeo;;;;;;;;;;;;;x;;;;
-BAK;Baekje;;;;;;;;;;;;;x;;;;
-BAK_ADJ;Baekje;;;;;;;;;;;;;x;;;;
-SIL;Silla;;;;;;;;;;;;;x;;;;
-SIL_ADJ;Silla;;;;;;;;;;;;;x;;;;
-GAY;Gaya;;;;;;;;;;;;;x;;;;
-GAY_ADJ;Gaya;;;;;;;;;;;;;x;;;;
-DUM;Dumakru;;;;;;;;;;;;;x;;;;
-DUM_ADJ;Dumakru;;;;;;;;;;;;;x;;;;
-KNT;Kent;;;;;;;;;;;;;x;;;;
-KNT_ADJ;Kent;;;;;;;;;;;;;x;;;;
-SSX;Sussex;;;;;;;;;;;;;x;;;;
-SSX_ADJ;Sussex;;;;;;;;;;;;;x;;;;
-BNC;Bernicia;;;;;;;;;;;;;x;;;;
-BNC_ADJ;Bernicia;;;;;;;;;;;;;x;;;;
-SVI;Suevi;;;;;;;;;;;;;x;;;;
-SVI_ADJ;Suevi;;;;;;;;;;;;;x;;;;
-VSG;Visigoths;;;;;;;;;;;;;x;;;;
-VSG_ADJ;Visigoths;;;;;;;;;;;;;x;;;;
-VND;Vandals;;;;;;;;;;;;;x;;;;
-VND_ADJ;Vandals;;;;;;;;;;;;;x;;;;
-FRC;Francia;;;;;;;;;;;;;x;;;;
-FRC_ADJ;Francia;;;;;;;;;;;;;x;;;;
-BRG;Burgundy;;;;;;;;;;;;;x;;;;
-BRG_ADJ;Burgundy;;;;;;;;;;;;;x;;;;
-ALM;Alamanni;;;;;;;;;;;;;x;;;;
-ALM_ADJ;Alamanni;;;;;;;;;;;;;x;;;;
-TRN;Thuringia;;;;;;;;;;;;;x;;;;
-TRN_ADJ;Thuringia;;;;;;;;;;;;;x;;;;
+SAR;Saar;;;;;;;;;;;;;x;;;;
+SAR_ADJ;Saar;;;;;;;;;;;;;x;;;;
