Add German partitions (preliminary).

--- a/Modern/localisation/countries.csv
+++ b/Modern/localisation/countries.csv
@@ -1,2 +1,4 @@
-SAR;Saar;;;;;;;;;;;;;x;;;;
-SAR_ADJ;Saar;;;;;;;;;;;;;x;;;;
+SAR;Saarland;;;;;;;;;;;;;x;;;;
+SAR_ADJ;Saarois;;;;;;;;;;;;;x;;;;
+DDR;East Germany;;;;;;;;;;;;;x;;;;
+DDR_ADJ;East Germany;;;;;;;;;;;;;x;;;;
