--- a/Modern/localisation/text.csv
+++ b/Modern/localisation/text.csv
@@ -15310,3 +15310,5 @@ LEADERDIED_BTN2;OK;OK;OK;OK;Aceptar;OK;Rendben;OK;;;;;;x;;;;
 LEADERDIED_BTN3;Goto;ALLER À;Goto;OK;Ir allí;OK;Rendben;OK;;;;;;x;;;;
 LEADERDIED_MAP;*;*;*;IdŸ do;*;Andare;Ugrás;Pøejít na;;;;;;x;;;;
 ;;;;*;;*;*;;;;;;;x;;;;
+SAR;Saar;;;;;;;;;;;;;x;;;;
+SAR_ADJ;Saarois;;;;;;;;;;;;;x;;;;
