Added Syria, Jordan, Lebanon.

--- a/Modern/localisation/countries.csv
+++ b/Modern/localisation/countries.csv
@@ -1,4 +1,10 @@
 SAR;Saarland;;;;;;;;;;;;;x;;;;
 SAR_ADJ;Saarois;;;;;;;;;;;;;x;;;;
 DDR;East Germany;;;;;;;;;;;;;x;;;;
-DDR_ADJ;East Germany;;;;;;;;;;;;;x;;;;
+DDR_ADJ;East German;;;;;;;;;;;;;x;;;;
+JOR;Jordan;;;;;;;;;;;;;x;;;;
+JOR_ADJ;Jordanian;;;;;;;;;;;;;x;;;;
+LEB;Lebanon;;;;;;;;;;;;;x;;;;
+LEB_ADJ;Lebanese;;;;;;;;;;;;;x;;;;
+SYR;Syria;;;;;;;;;;;;;x;;;;
+SYR_ADJ;Syrian;;;;;;;;;;;;;x;;;;
