Add Egypt, Ethiopia, Libya.

--- a/Modern/localisation/countries.csv
+++ b/Modern/localisation/countries.csv
@@ -8,3 +8,5 @@ LEB;Lebanon;;;;;;;;;;;;;x;;;;
 LEB_ADJ;Lebanese;;;;;;;;;;;;;x;;;;
 SYR;Syria;;;;;;;;;;;;;x;;;;
 SYR_ADJ;Syrian;;;;;;;;;;;;;x;;;;
+LBY;Libya;;;;;;;;;;;;;x;;;;
+LBY_ADJ;Libyan;;;;;;;;;;;;;x;;;;
