Remove residual ideologies, add Indian counttries (except for India).

--- a/Modern/localisation/countries.csv
+++ b/Modern/localisation/countries.csv
@@ -10,3 +10,5 @@ SYR;Syria;;;;;;;;;;;;;x;;;;
 SYR_ADJ;Syrian;;;;;;;;;;;;;x;;;;
 LBY;Libya;;;;;;;;;;;;;x;;;;
 LBY_ADJ;Libyan;;;;;;;;;;;;;x;;;;
+PAK;Pakistan;;;;;;;;;;;;;x;;;;
+PAK_ADJ;Pakistani;;;;;;;;;;;;;x;;;;
