British political parties

--- a/Modern/localisation/ideologies.csv
+++ b/Modern/localisation/ideologies.csv
@@ -1,7 +1,12 @@
-arian;Arian;;;;;;;;;;;;;x;;;;
-chalcedonian;Chalcedonian;;;;;;;;;;;;;x;;;;
-germanic;Germanic;;;;;;;;;;;;;x;;;;
-shinto;Shinto;;;;;;;;;;;;;x;;;;
-muist;Muist;;;;;;;;;;;;;x;;;;
-mahayana;Mahayana;;;;;;;;;;;;;x;;;;
-druidist;Druidist;;;;;;;;;;;;;x;;;;
+fascist;Fascist;;;;;;;;;;;;;x;;;;
+nationalist;Nationalist;;;;;;;;;;;;;x;;;;
+islamist;Islamist;;;;;;;;;;;;;x;;;;
+monarchist;Monarchist;;;;;;;;;;;;;x;;;;
+reactionary;Reactionary;;;;;;;;;;;;;x;;;;
+conservative;Conservative;;;;;;;;;;;;;x;;;;
+socialist;Socialist;;;;;;;;;;;;;x;;;;
+socdem;Social Democrat;;;;;;;;;;;;;x;;;;
+progressive;Progressive;;;;;;;;;;;;;x;;;;
+communist;Communist;;;;;;;;;;;;;x;;;;
+liberal;Liberal;;;;;;;;;;;;;x;;;;
+anarcho_liberal;Libertarian;;;;;;;;;;;;;x;;;;
