Add China and Mongolia (partially)

--- a/Modern/localisation/countries.csv
+++ b/Modern/localisation/countries.csv
@@ -12,3 +12,5 @@ LBY;Libya;;;;;;;;;;;;;x;;;;
 LBY_ADJ;Libyan;;;;;;;;;;;;;x;;;;
 PAK;Pakistan;;;;;;;;;;;;;x;;;;
 PAK_ADJ;Pakistani;;;;;;;;;;;;;x;;;;
+ROC;Republic of China;;;;;;;;;;;;;x;;;;
+ROC_ADJ;Chinese;;;;;;;;;;;;;x;;;;
